--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,8 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    z-index: 8;
+    z-index: 2;
+    margin-left: 0.2em;
 }
 .dropdown__icon span {
     display: inline-block;
@@ -36,6 +37,11 @@
 }
 .navbar__option-container div:hover .dropdown__icon span:nth-child(2) {
 	transform: rotate(-135deg);
+}
+.navbar-proyectos__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .header__navbar{
     display: flex;
