--- a/Site.Master
+++ b/Site.Master
@@ -11,7 +11,7 @@
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
-    </asp:PlaceHolder>
+    <%--</asp:PlaceHolder>--%>
 
     <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/header.css"/>
     <link rel="stylesheet" href="css/home.css"/>
     <link rel="stylesheet" href="css/footer.css"/>
+    <link rel="stylesheet" href="css/contacto.css"/>
 </head>
 <body>
     <form runat="server">
@@ -65,21 +66,28 @@
                     </li>
                     <li class="navbar__option-container">
                         <div>
-                            <a href="#" class="navbar__option">Aprende</a>
+                            <div class="navbar-aprende__container">
+                                <a href="#" class="navbar__option">Aprende</a>
+                                <div class="dropdown__icon">
+                                    <span></span>
+                                    <span></span>
+                                </div>
+                            </div>
                             <ul class="navbar__sublist">
-                                <li class="navbar__suboption">Opcion</li>
+                                <li class="navbar__suboption">Opcion 1</li>
+                                <li class="navbar__suboption">Opcion 2</li>
                             </ul>
                         </div>
                     </li>
                     <li class="navbar__option-container">
                         <div>
-                            <a href="#" class="navbar__option">Contacto</a>
+                            <a href="Contacto.aspx" class="navbar__option">Contacto</a>
                         </div>
                     </li>
                 </ul>
                 <div class="navbar__login">
                     <i class="fa-solid fa-user login__logo"></i>
-                    <span class="login__text">Iniciar sesión/Registrarse</span>
+                    <asp:Button ID="login__text" runat="server" Text="Iniciar sesión/Registrarse" />
                 </div>
             </nav>
         </header>
@@ -125,7 +133,6 @@
         </div>
     </form>
     <asp:PlaceHolder runat="server">
-        <%: Scripts.Render("~/Scripts/bootstrap.js") %>
     </asp:PlaceHolder>
 </body>
 </html>
