--- a/css/global.css
+++ b/css/global.css
@@ -9,7 +9,6 @@
     font-size: 20px;
     font-family: 'Montserrat';
 }
-
 body {
     position: relative;
     color: white;
@@ -28,4 +27,7 @@ body::before {
     background-position: 0 -200px;
     opacity: 0.1;
     z-index: -1;
+}
+a:hover {
+    color: white!important;
 }
