--- a/css/global.css
+++ b/css/global.css
@@ -22,6 +22,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
+    min-height: 100vh;
     background-image: url('../Content/img/fondo-1.jpeg');
     background-size: cover;
     background-position: 0 -200px;
