--- a/Site.Master
+++ b/Site.Master
@@ -87,7 +87,7 @@
                 </ul>
                 <div class="navbar__login">
                     <i class="fa-solid fa-user login__logo"></i>
-                    <span class="login__text"><a href="Login.aspx" class="navbar__option">Iniciar sesión/Registrarse</a></span>
+                    <span class="login__text"><a href="Login.aspx" class="navbar__option" id="login__text">Iniciar sesión/Registrarse</a></span>
                 </div>
             </nav>
         </header>
