--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -3,32 +3,66 @@
     padding: 20px;
     margin: auto;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
+}
+section#project__projects {
+    margin-top: 2em;
 }
 .proyectos h1 {
     font-size: 1.5rem;
     text-align: center;
-    height: 120px;
+}
+div#project__CheckBoxes, div#project__DropDownLists {
+    margin-bottom: 1em;
+}
+input#MainContent_butClean {
+    background-color: #5b2a79;
+    border: none;
+    color: white;
+    padding: 1em;
+    margin: 1em;
+    cursor: pointer;
+}
+select#MainContent_comboProgrammingLanguage, select#MainContent_comboType, select#MainContent_comboCategory {
+    padding: 0.5em;
+}
+input#MainContent_checkOpen, input#MainContent_checkEnded {
+    height: 20px;
+    width: 20px;
 }
 section#project__filters {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
+div#project__DropDownLists {
+    display: flex;
+}
 .project__language, .project__type {
     background-color: #5B2A79;
 }
+p.project__language, p.project__type {
+    color: #ffff!important;
+}
 .project__language {
     border-radius: 25px;
-    padding: 1em 2em;
+    padding: 0.5em 1em;
 }
-.project__type {
+.project__category {
     border-radius: 100px;
-    padding: 1.5em;
+    padding: 1em;
 }
-.project__language p, .project__language span, .project__type p, .project__type span {
+.project__language p, .project__language span, .project__category p, .project__category span {
     color: white;
+}
+p.project__type {
+    color: #5b2a79;
+    font-weight: bolder;
+    font-size: 1.25rem;
+}
+p.project__lblStartDate, span.project__numStartDate, p.project__lblEndDate, span.project__numEndDate {
+    font-size: 0.85rem;
 }
 .project__container {
     background-color: #BEAEC2;
@@ -47,10 +81,24 @@ section#project__filters {
 }
 .project__firstRow, .project__secondRow, .project__thirdRow {
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: space-between;
 }
-.project_secondRow {
+.project__secondRow {
     flex-direction: column;
+    margin: 2em 0;
+}
+.project__thirdRow {
+    align-items: flex-end;
+    justify-content: space-around;
+}
+h2.project__title {
+    color: black;
+    font-weight: bolder;
+    font-size: 1.50rem;
+    text-transform: uppercase;
+    font-family: 'Montserrat';
+    margin-bottom: 0.5em;
 }
 .project__users {
     display: flex;
@@ -59,4 +107,43 @@ section#project__filters {
     display: flex;
     align-items: center;
     flex-direction: column;
+    width: 20%;
+}
+.project__participantsContainer i {
+    color: #5b2a79;
+    font-size: 1.50rem;
+}
+p.project__actualParticipants, span.separator, p.project__maxParticipants {
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: #5b2a79;
+}
+button.project__moreInfo {
+    background-color: #5b2a79;
+    color: white;
+    border: none;
+    padding: 1em 2em;
+    font-size: 1rem;
+    height: fit-content;
+    width: fit-content !important;
+}
+.project__state {
+    display: flex;
+    flex-direction: column;
+}
+span.project__open, span.project__closed {
+    font-weight: bold;
+    margin-bottom: 0.5em;
+}
+span.project__open {
+    color: #008900;
+}
+span.project__closed {
+    color: #ab0000;
+}
+span.project__running {
+    background-color: #5b2a79;
+    color: white;
+    padding: 0.5em;
+    border-radius: 50px;
 }
