--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -6,7 +6,10 @@
     align-items: center;
     flex-direction: column;
 }
-section#project__projects {
+section#MainContent_project__projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-top: 2em;
 }
 .proyectos h1 {
@@ -66,7 +69,7 @@ p.project__lblStartDate, span.project__numStartDate, p.project__lblEndDate, span
 }
 .project__container {
     background-color: #BEAEC2;
-    width: 50%;
+    width: 45%;
     padding: 2em;
     border-radius: 25px;
 }
