--- a/css/home.css
+++ b/css/home.css
@@ -6,7 +6,6 @@
     padding: 20px;
     margin: auto;
 }
-
 .home__titulo, .home__titulo--violet {
     font-size: 2rem;
     margin: 50px auto;
@@ -88,7 +87,8 @@
 }
 
 .botones__btn {
-    height: 70px;
+    height: fit-content!important;
+    width: fit-content!important;
     padding: 20px;
     color: white;
     font-weight: bold;
