--- a/css/login.css
+++ b/css/login.css
@@ -1,27 +1,42 @@
-img{
+main.login, main.signup {
+    max-width: 1400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+}
+
+main.login img, main.signup img{
     width: 300px;
+    margin: 2em;
 }
 
-body{
-    text-align: center;
-}
-
-button{
-    width: 90px;
-    height: 30px;
-    border-radius: 2px;
-    justify-content: center;
-}
-
-input[type=text],[type=password]{
-    width: 250px;
-    height: 40px;
+main.login input[type=text], main.login [type=password], main.signup input[type=text], main.signup [type=password] {
+    width: 100%;
+    height: 50px;
     border-radius: 2px;
     text-align: center;
-    background-color: black;
-    color: white;
+    background-color: #beaec2;
+    color: black;
+    margin: 1em 0;
 }
 
-.connected{
+main.login .connected{
     text-wrap: pretty;
+}
+div#login__form, #signUp__form {
+    text-align: center;
+}
+#login__submit input, #signUp__submit input {
+    background-color: #5b2a79;
+    color: white;
+    border: none;
+    padding: 1em 2em;
+    margin: 1em 0;
+}
+#login__toRegister p {
+    margin-top: 2em;
+}
+a#forgotPasswordLink, #login__toRegister a, #signUp__toLogin a {
+    color: #beaec2;
 }
