--- a/Site.Master
+++ b/Site.Master
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Miriam+Libre"/>
     <link rel="stylesheet" href="css/global.css"/>
     <link rel="stylesheet" href="css/header.css"/>
-    <link rel="stylesheet" href="css/home.css"/>
     <link rel="stylesheet" href="css/footer.css"/>
 </head>
 <body>
@@ -75,9 +74,9 @@
                                 </div>
                             </div>
                             <ul class="navbar__sublist">
-                                <li class="navbar__suboption">Proyectos de CodeLinker</li>
-                                <li class="navbar__suboption">Proyectos de la comunidad</li>
-                                <li class="navbar__suboption">Crea tu proyecto</li>
+                                <li class="navbar__suboption">Certificaciones gratuitas</li>
+                                <li class="navbar__suboption">Certificaciones de pago</li>
+                                <li class="navbar__suboption">Recomendaciones de programas</li>
                             </ul>
                         </div>
                     </li>
