--- a/Site.Master
+++ b/Site.Master
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Miriam+Libre"/>
     <link rel="stylesheet" href="css/global.css"/>
     <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/home.css"/>
     <link rel="stylesheet" href="css/footer.css"/>
 </head>
 <body>
