--- a/css/crear-proyecto.css
+++ b/css/crear-proyecto.css
@@ -70,6 +70,12 @@
     width: 100%;
     height: 40px;
     margin-bottom: 30px;
+    border: 1px solid #767676;
+    border-radius: 8px;
+}
+
+.input {
+    height: 30px;
     padding: 0 8px;
     border: 1px solid #767676;
     border-radius: 8px;
