--- a/css/perfil.css
+++ b/css/perfil.css
@@ -97,9 +97,12 @@
 
 .especialidad__container{
     background-color: var(--secondary);
-    padding: 30px 10px 30px 50px;
+    padding: 1em;
+    display: flex;
     border-radius: 24px;
     color: #000;
+    flex-direction: column;
+    align-items: center;
 }
 
 .especialidad__container *{
@@ -207,4 +210,33 @@
 .gestion__botones{
     display: flex;
     gap: 50px;
+}
+
+input#MainContent_frontend, #MainContent_backend, #MainContent_fullstack {
+    width: 20px;
+    height: 20px;
+    margin: 0.5em;
+}
+.especialidad__container article {
+    display: flex;
+    align-items: center;
+}
+article#MainContent_linksContainer div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1em;
+}
+#MainContent_linksContainer input {
+    padding: 0.5em;
+    width: 100%;
+    background-color: #beaec2;
+    font-family: 'Montserrat';
+}
+#MainContent_linksContainer i {
+    font-size: 1.50rem;
+    background-color: #5b2a79;
+    color: white;
+    padding: 0.5em;
+    border-radius: 100px;
 }
