No se puede acceder a crear proyectos si no has iniciado sesión, te redirige a login

--- a/Site.Master
+++ b/Site.Master
@@ -60,7 +60,7 @@
                             </div>
                             <ul class="navbar__sublist">
                                 <a href="Projects.aspx"><li class="navbar__suboption">Ver proyectos</li></a>
-                                <a href="CreateProject.aspx"><li class="navbar__suboption">Crear proyecto</li></a>
+                                <a href="Login.aspx" runat="server" id="crear__proyectos"><li class="navbar__suboption">Crear proyecto</li></a>
                             </ul>
                         </div>
                     </li>
