--- a/css/perfil.css
+++ b/css/perfil.css
@@ -280,10 +280,30 @@ span#MainContent_lblChangePhoto, #MainContent_photoFile {
 
 .perfilPublico div#MainContent_linksContainer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
+}
+
+.perfilPublico div#MainContent_linksContainer i {
+    margin: 0.5em;
 }
 
 .perfilPublico div#MainContent_linksContainer div {
     margin: 0.5em 0;
+}
+
+.perfilPublico .usuario__infoBasica {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.perfilPublico .perfil__usuario {
+    width: 100%;
+    display: flex;
+    justify-items: center;
+    flex-direction: column;
+    align-items: center;
 }
