HTMLs pendientes Cambio de foto de perfil

--- a/css/aprende.css
+++ b/css/aprende.css
@@ -8,13 +8,13 @@
     text-align: center;
     margin: 1em 0;
 }
-div#freeCertifications__container, #paidCertifications__container, #tutorials__container, #programRecomendations__container {
+div#freeCertifications__container {
+    width: 40%;
     text-align: center;
+    background-color: #beaec2;
     color: black;
+    padding: 1em;
     border-radius: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
 }
 .learnContent__container i {
     color: white;
@@ -25,13 +25,8 @@ div#freeCertifications__container, #paidCertifications__container, #tutorials__c
 .learnContent__container {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    background-color: #beaec2;
-    padding: 1em;
-    width: 40%;
-    margin: 1em;
-    border-radius: 30px;
     align-items: center;
+    justify-content: space-around;
 }
 .learnContent__container button {
     border: none;
