--- a/css/aprende.css
+++ b/css/aprende.css
@@ -71,6 +71,7 @@ main.aprende {
     flex-direction: column;
     align-items: center;
     margin: auto;
+    max-width: 1400px;
 }
 main.aprende p {
     font-family: 'Montserrat';
